<resources>
    <string name="app_name">CookMate</string>
    <string name="menu_recipes_text">Recipes</string>
    <string name="menu_search_text">Search</string>
    <string name="menu_shopping_list_text">Shopping List</string>
    <string name="menu_profile_text">Profile</string>
    <string name="add_recipe_button_description">Add a new recipe</string>
    <string name="update_profile_button_description">Update Profile</string>
    <string name="add_image">Add Images</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_profile_settings" translatable="false">ProfileSettingsActivity</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search for recipes</string>
    <string name="search_button">Search</string>

    <string name="add_shopping_list_button_description">Add a new shopping cart</string>
    <string name="save_cart">Save shopping cart</string>
    <string name="shopping_list_title">Shopping list name</string>
    <string name="next_item">What do you need for your next recipe?</string>
    <string name="add_item">Add item</string>
    <string name="to_buy">To buy</string>
    <string name="background_image">Background image</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="display_name_profile">Name</string>
    <string name="display_description_profile">User description</string>
    <string name="gallery_description_profile">Show off some of your creations!</string>
    <string name="info_banner_profile">Tap any of the items to update profile information</string>
    <string name="recipe_title_add_recipe">Recipe Title</string>
    <string name="hint_title_add_recipe">Title</string>
    <string name="ingredients_title_add_recipe">Ingredients</string>
    <string name="hint_ingredients_add_recipe">Add Ingredients</string>
    <string name="title_instructions_add_recipe">Instructions</string>
    <string name="hint_instructions_add_recipe">Add Instructions</string>
    <string name="title_gallery_add_recipe">Show us how yummy it looks!</string>
    <string name="add_recipe_button_add_recipe">Add Recipe</string>
    <string name="profile_pic_title_edit_profile">Choose Your Profile Pic</string>
    <string name="name_title_edit_profile">How should we call you?</string>
    <string name="hint_name_edit_profile">Insert your name</string>
    <string name="desc_title_edit_profile">Describe yourself!</string>
    <string name="desc_hint_edit_profile">What would you like others to know about you?</string>
    <string name="update_profile_button_edit_profile">Update Profile</string>
    <string name="welcome_title">Welcome!</string>
    <string name="email_login" translatable="false">Email</string>
    <string name="email_hint_login" translatable="false">Email...</string>
    <string name="password_login">Password</string>
    <string name="password_hint_login">Password...</string>
    <string name="login_button_login">Login</string>
    <string name="banner_to_registration">Need new Account?Sign Up Here</string>
    <string name="sign_up_here_registration">Sign Up Here</string>
    <string name="name_registration">Name</string>
    <string name="name_hint_registration">Your Name...</string>
    <string name="email_registration" translatable="false">Email</string>
    <string name="email_hint_registration" translatable="false">Email...</string>
    <string name="password_registration">Password</string>
    <string name="password_hint_registration">Password...</string>
    <string name="create_account_registration">Create Account</string>
    <string name="banner_to_login_registration">Already Have a Account?Sign In</string>
    <string name="edit_description_popup">Edit Description</string>
    <string name="new_desc_popup">Enter new user description</string>
    <string name="update_button_popup">Update</string>
    <string name="edit_username_popup">Edit Username</string>
    <string name="edit_uname_hint_popup">Enter your new username</string>
    <string name="edit_desc_popup">Edit Description</string>
    <string name="edit_desc_hint_popup">Enter your new user description</string>
    <string name="recipes_nav">Recipes</string>
    <string name="search_nav">Search</string>
    <string name="shop_list_nav">Shopping List</string>
    <string name="profile_nav">Profile</string>
    <string name="ingredients_card_recipes">Ingredients</string>
    <string name="instructions_card_recipe">Instructions</string>
    <string name="discover_main_button">Discover</string>
    <string name="your_recipes_main_button">Your Recipes</string>
    <string name="items_sc_detail">Items</string>
    <string name="to_buy_sc_card">To buy</string>
    <string name="title_warning_new_recipe">Please enter a title</string>
    <string name="ingredients_warning_new_recipe">Please enter ingredients</string>
    <string name="instructions__warning_new_recipe">Please enter instructions</string>
    <string name="no_item_warning_new_sc">Enter an item</string>
    <string name="added_warning_new_sc">"Added "</string>
    <string name="title_warning_new_sc">Please enter a title</string>
    <string name="items_warning_new_sc">Please enter items to buy</string>
    <string name="noti_banner">"Why not try out making "</string>
    <string name="edit_profile_warning_name">Please enter your name</string>
    <string name="edit_profile_warning_desc">Please enter a description</string>
    <string name="search_hint_fragment">Search by Title or Ingredients</string>
</resources>