<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/recipe_title_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/recipe_title_add_recipe"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="10dp"/>

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_title_add_recipe"
        android:inputType="text"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:id="@+id/tv_ingredients_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ingredients_title_add_recipe"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="10dp"/>

    <EditText
        android:id="@+id/et_ingredients"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/hint_ingredients_add_recipe"
        android:inputType="text"
        android:layout_marginHorizontal="10dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tv_instructions_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/title_instructions_add_recipe"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="10dp"/>

    <EditText
        android:id="@+id/et_instructions"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:hint="@string/hint_instructions_add_recipe"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:id="@+id/tv_images_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_gallery_add_recipe"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="10dp"/>

    <ImageButton
        android:id="@+id/btn_add_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_update_pic"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btn_add_recipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/add_recipe_button_add_recipe" />

</LinearLayout>
