<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/purple_200">

<TextView
    android:id="@+id/popup_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/edit_description_popup"
    android:textSize="18sp"
    android:textStyle="bold"/>

<EditText
    android:id="@+id/popup_edit_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:enabled="true"
    android:hint="@string/new_desc_popup"
    android:inputType="textMultiLine"
    />

<Button
    android:id="@+id/update_desc_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/update_button_popup" />
</LinearLayout>