<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1FEFF"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:background="#F1FEFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/background_image"
            android:scaleX="1.3"
            android:scaleY="1.1"
            app:srcCompat="@drawable/shopping_cropped" />

        <EditText
            android:id="@+id/et_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView2"
            android:layout_centerInParent="true"
            android:hint="@string/shopping_list_title"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_items"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/et_title"
            android:layout_margin="8dp"
            android:alpha="0.7"
            android:ems="10"
            android:hint="@string/next_item"
            android:inputType="text"
            android:padding="16dp" />

        <ImageView
            android:id="@+id/add"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_below="@+id/et_title"
            android:layout_centerVertical="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="19dp"
            android:layout_toEndOf="@+id/et_items"
            android:src="@drawable/add_item" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_add_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/save_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shoppingItems"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_below="@+id/btn_add_list"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_list" />


</androidx.constraintlayout.widget.ConstraintLayout>
